# saas-entitlements-api-demo

./: .gitignore  README.md  generation-metrics.json
app-python/: .dockerignore  Dockerfile  compose.yaml  pyproject.toml
app-python/entitlements_app/: adapters.py  auth.py  entities.py  events.py  main.py  ports.py  wire_compat.py
app-python/entitlements_app/requests/: add_feature_to_plan_http_request.py  add_feature_to_plan_request.py  append_audit_event_request.py  check_feature_access_request.py  create_plan_request.py  get_feature_query_request.py  get_plan_query_request.py  list_account_audit_events_query_request.py  list_account_overrides_query_request.py  list_account_subscriptions_query_request.py  list_plan_entitlements_query_request.py  list_subscription_usage_query_request.py  record_usage_request.py  register_feature_request.py  set_account_override_http_request.py  set_account_override_request.py  start_subscription_request.py
app-python/entitlements_app/routers/: add_feature_to_plan_router.py  append_audit_event_router.py  check_feature_access_router.py  create_plan_router.py  get_feature_query_router.py  get_plan_query_router.py  list_account_audit_events_query_router.py  list_account_overrides_query_router.py  list_account_subscriptions_query_router.py  list_plan_entitlements_query_router.py  list_subscription_usage_query_router.py  record_usage_router.py  register_feature_router.py  set_account_override_router.py  start_subscription_router.py
app-python/entitlements_app/services/: add_feature_to_plan_service.py  append_audit_event_service.py  (+13 more)
(+115 files in other folders)
