[project]
name = "entitlements_app"
version = "0.1.0"
description = "FastAPI app for SaaS subscription entitlements"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["entitlements_app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["entitlements_app/tests"]
python_files = ["test_*.py"]
addopts = "-q"